--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,103 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
+
+@mixin easeOut {
+    transition: all 0.5s ease-out;
+}
+
+html {
+    font-size: 16px;
+}
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     padding: 0;
+    margin: 0;
     background: $primary-color;
+    color: #fff;
+    height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, Arial, sans-serif;
+    line-height:1.5;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-weight: 600;
+
+    &.lg-heading {
+        font-size: 6rem;
+    }
+    &.sm-heading {
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+        background: rgba(lighten($primary-color, 2), 0.5);
+    }
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+header {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
+
+.text-secondary {
+    color:  $secondary-color;
+}
+
+main {
+    padding: 4rem;
+    height: 100%;
+
+    .icons {
+        margin-top: 1rem;
+
+        a {
+            padding: 0.5rem;
+
+            &:hover {
+                color: $secondary-color;
+                @include easeOut();
+            }
+        }
+    }
+
+    &#home {
+        overflow: hidden;
+        h1 {
+            margin-top: 20vh;
+        }
+    }
+}
+
+.change-text:before {
+    content: 'Developer';
+    color: $secondary-color;
+    animation: animate infinite 5s;
+}
+
+@keyframes animate {
+    25%{
+        content: 'Developer';
+        color: $secondary-color;
+    }
+    50%{
+        content: 'Web Developer';
+        color: $secondary-color;
+    }
+    75%{
+        content: 'Designer';
+        color: $secondary-color;
+    }
+    100%{
+        content: 'Freelancer';
+        color: $secondary-color;
+    }
 }
