--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,9 +50,10 @@ header {
 }
 
 main {
-    padding-left: 29rem;
+    padding-left: 6rem;
     padding-top: 6rem;
-    height: 100%;
+    //height: 100%;
+    min-height: calc(100vh - 60px);
 
     .icons {
         margin-top: 1rem;
@@ -99,3 +100,47 @@ main {
         color: $secondary-color;
     }
 }
+
+.about-info {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas:
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3, 1fr);
+
+    
+    .bio {
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
+    
+    .job-1 {
+        grid-area: job1;
+    }
+
+    .job {
+        background: lighten($primary-color, 5);
+        padding: 0.5rem;
+        border-bottom: $secondary-color 5px solid;
+    }
+}
+
+.bio-image {
+    width: 250px;
+    height: 250px;
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+}
+
+#main-footer {
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color, 10);
+    color: white;
+    height: 60px;
+}
+
+@import 'mobile';
