--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,7 +52,6 @@ header {
 main {
     padding-left: 6rem;
     padding-top: 6rem;
-    //height: 100%;
     min-height: calc(100vh - 60px);
 
     .icons {
@@ -133,6 +132,26 @@ main {
     margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
+}
+
+//my work
+
+.projects {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+
+
+    img {
+        width: 100%;
+        border: white solid;
+        
+        &:hover {
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
 }
 
 #main-footer {
