--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,5 +1,13 @@
 @include mediaXl {
 
+    * {
+        overflow: hidden;
+    }
+
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
 }
 
 @include mediaLg {
@@ -49,10 +57,27 @@
 
         grid-template-columns: 1fr;
     }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @include mediaSm {
+    main {
+        padding: 2rem;
+    }
+
     main #home h1 {
         margin-top: 10vh;
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
+    }
+
+    .lg-heading {
+        margin-top: 1rem;
+        font-size: 5rem;
     }
 }
