--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,8 +150,32 @@ main {
             opacity: 0.5;
             border-color: $secondary-color;
             @include easeOut;
+
         }
     }
+}
+
+//button styles
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+    &:hover {
+        background: $secondary-color;
+    }
+}
+
+.btn-dark {
+    @extend .btn;
+    background: darken($primary-color, 50);
+    color: white;
+}
+
+.btn-light {
+    @extend .btn;
+    background: lighten($primary-color, 50);
+    color: black;
 }
 
 #main-footer {
