--- a/scss/main.scss
+++ b/scss/main.scss
@@ -161,6 +161,34 @@ main {
     }
 }
 
+//contact
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 3px white solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 0.3rem;
+        margin-top: 5rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1rem;
+            color: black;
+            background: $secondary-color;
+
+            span {
+                color: black;
+            }
+        }
+    }
+}
+
 //button styles
 .btn {
     display: block;
