--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -79,7 +79,7 @@
         .portrait {
             width: 250px;
             height: 250px;
-            background: url('../img/portrait.jpg');
+            background: url('../img/portrait1.jpg');
             background-size: cover;
             border-radius: 50%;
             border: solid 3px $secondary-color;
