--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,8 +50,7 @@ header {
 }
 
 main {
-    padding-left: 6rem;
-    padding-top: 6rem;
+    padding: 6rem 6rem 6rem;
     min-height: calc(100vh - 60px);
 
     .icons {
@@ -108,7 +107,6 @@ main {
     'job1 job2 job3';
     grid-template-columns: repeat(3, 1fr);
 
-    
     .bio {
         grid-area: bio;
         font-size: 1.5rem;
@@ -122,9 +120,13 @@ main {
         grid-area: job2;
     }
 
+    .job-3 {
+        grid-area: job3;
+    }
+
     .job {
         background: lighten($primary-color, 5);
-        padding: 0.5rem;
+        padding: 1.2rem;
         border-bottom: $secondary-color 5px solid;
     }
 }
