--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,15 +82,15 @@ main {
 
 @keyframes animate {
     25%{
-        content: 'Developer';
+        content: 'Mobile Developer';
         color: $secondary-color;
     }
     50%{
-        content: 'Web Developer';
+        content: 'Full-Stack Developer';
         color: $secondary-color;
     }
     75%{
-        content: 'Designer';
+        content: 'Student';
         color: $secondary-color;
     }
     100%{
