--- a/scss/main.scss
+++ b/scss/main.scss
@@ -67,6 +67,7 @@ main {
     }
 
     &#home {
+        width: 100%;
         overflow: hidden;
         h1 {
             margin-top: 20vh;
@@ -90,7 +91,7 @@ main {
         color: $secondary-color;
     }
     75%{
-        content: 'Student ';
+        content: 'Student';
         color: $secondary-color;
     }
     100%{
@@ -149,9 +150,11 @@ main {
     grid-template-columns: repeat(3, 1fr);
 
     .item {
-        margin-left: -6rem; //original padding
+        // margin-left: -6rem; //original padding
         grid-area: project2;
-        padding-bottom: 20px;
+        padding-bottom: 40px;
+        padding-left: 12px;
+        padding-right: 12px;
     }
 
     img {
